--- a/setup.cfg
+++ b/setup.cfg
@@ -18,13 +18,25 @@ python_requires = >=3.6
 setup_requires = setuptools_scm
 install_requires =
     astropy
-
+    crds
+    drizzlepac
+    boto3
+    awscli
+    spec-plots==1.34.6
 
 [options.extras_require]
 test =
     pytest-astropy
 docs =
     sphinx-astropy
+dev =
+    black >=19.3b0, <20
+    flake8
+    pytest >=5.0.1, <6
+    pytest-cov >= 2.7.1, <3
+    pytest-profiling
+    tox >=3.13.2, <4
+    bandit
 
 [options.package_data]
 caldp = data/*
@@ -68,3 +80,7 @@ exclude_lines =
     pragma: py{ignore_python_version}
     # Don't complain about IPython completion helper
     def _ipython_key_completions_
+
+[flake8]
+ignore = E501, E203, W503
+exclude = .git, __pycache__, build, dist, eggs, *.egg
