--- a/.gitignore
+++ b/.gitignore
@@ -56,10 +56,11 @@ distribute-*.tar.gz
 .project
 .pydevproject
 .settings
-
+crds_cache
 # Mac OSX
 .DS_Store
 
 .astropy
 .bash_history
 .vscode
+.python_history
