--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ env:
         - uref=${CRDS_PATH}/references/hst/wfcpc2/
         - uref_linux=$uref
         - DOCKER_REPO=alphasentaurii/caldp
-        - DOCKER_TAG=stable
-        - CAL_BASE_IMAGE=stsci/hst-pipeline:stable
+        - DOCKER_TAG=latest
+        - CAL_BASE_IMAGE=stsci/hst-pipeline:latest
         - CALDP_TEST_FILE_SIZE_THRESHOLD=0.30
 
 jobs:
