--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: run black style checks
-        run: black --check caldp caldp/tests
+        run: black --check caldp caldp/tests -l 120 -v
 
   flake8:
     name: run flake8
