Updated CALDP and CRDS context in caldp-setup, along with changelog (#94)
- overhauled scripts and github actions to shift to 100% Docker
  based development and test.   native development and test is
  still possible but no longer supported and discouraged.
- default base docker image set to CALDP_20221010_CAL_final
- default crds update to hst_1038.pmap

Co-authored-by: jaytmiller <jmiller@stsci.edu>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.rst
-include CHANGES.rst
+include changelog.md
 include setup.cfg
+include caldp-setup
 include LICENSE.rst
 include pyproject.toml
 
