--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
 [options.extras_require]
 test =
     pytest-astropy
+    moto
 docs =
     sphinx-astropy
 dev =
@@ -36,7 +37,6 @@ dev =
     pytest >=5.0.1, <6
     pytest-cov >= 2.7.1, <3
     pytest-profiling
-    tox >=3.13.2, <4
     bandit
 
 [options.package_data]
