--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,11 +1,11 @@
 name: code checks
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   bandit:
     name: run bandit
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - name: set up python 3.8.11
@@ -24,7 +24,7 @@ jobs:
 
   black:
     name: run black
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - name: set up python 3.8.11
@@ -43,7 +43,7 @@ jobs:
 
   flake8:
     name: run flake8
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - name: set up python 3.8.11
