--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ docs =
 dev =
     black >=19.3b0, <20
     flake8
-    pytest >=5.0.1, <6
+    pytest >=5.0.1
     pytest-cov >= 2.7.1, <3
     pytest-profiling
     bandit
